ENH: Added Sphinx documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,3 +19,10 @@ classifier =
 keywords =
     medical
     imaging
+
+[build_sphinx]
+builders = html,man
+source-dir = doc/source
+build-dir = doc/build
+all-files = 1
+warning-is-error = 1
