ENH: Added cli for ogo

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,10 @@ keywords =
     medical
     imaging
 
+[entry_points]
+console_scripts =
+    ogo = ogo.cli.cli:main
+
 [build_sphinx]
 builders = html,man
 source-dir = doc/source
