DOC: Get Sphinx + ReadTheDocs working

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ogo
-author = Bryce A. Besler, Andrew S. Michalski
+author = Bryce A. Besler, Andrew S. Michalski, Steven K. Boyd
 author-email = babesler@ucalgary.ca, andrew.michalski@ucalgary.ca
 summary = Technologies for opportunistic screening of osteoporosis
 description-file = README.rst
@@ -23,9 +23,6 @@ keywords =
 console_scripts =
     ogo = ogo.cli.cli:main
 
-[build_sphinx]
-builders = html,man
-source-dir = doc/source
-build-dir = doc/build
-all-files = 1
-warning-is-error = 1
+[pbr]
+skip_changelog = 1
+skip_authors = 1
