rearranged files and added tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,16 +22,17 @@ keywords =
 [entry_points]
 console_scripts =
     ogoCli = ogo.cli.cli:main
-    ogoIntCal = ogo.cli.calib.ogo_internal_calibration:main
-    ogoBmdAnalysis = ogo.cli.calib.ogo_bmd_analysis:main
-    ogoBmdTabulate = ogo.cli.calib.ogo_bmd_tabulate:main
-    ogoFePistoiaTabulate = ogo.cli.calib.ogo_fe_pistoia_tabulate:main
-    ogoL4CompressionFe = ogo.cli.calib.ogo_l4_compression_fe:main
-    ogoMindwaysModel3AsyncCalib = ogo.cli.calib.ogo_mindways_model3_asynchronous_calibration:main
-    OgoMindwaysModel3PhantomCalib = ogo.cli.calib.ogo_mindways_model3_phantom_calibration:main
-    ogoPistoia = ogo.cli.calib.ogo_pistoia:main
-    ogoSidewaysFe = ogo.cli.calib.ogo_sideways_fall_fe:main
-    ogoBMassPhantom = ogo.cli.calib.ogo_b_mas200_phantom_calibration:main
+    ogoIntCal = ogo.cli.InternalCalibration:main
+    ogoBmdAnalysis = ogo.cli.BmdAnalysis:main
+    ogoBmdTabulate = ogo.cli.BmdTabulate:main
+    ogoFePistoiaTabulate = ogo.cli.FePistoiaTabulate:main
+    ogoL4CompressionFe = ogo.cli.L4Compression_fe:main
+    ogoMindwaysModel3AsyncCalib = ogo.cli.MindwaysModel3AsynchronousCalibration:main
+    ogoMindwaysModel3PhantomCalib = ogo.cli.MindwaysModel3PhantomCalibration:main
+    ogoPistoia = ogo.cli.Pistoia:main
+    ogoSidewaysFe = ogo.cli.SidewaysFallFe:main
+    ogoBMassPhantom = ogo.cli.BMas200PhantomCalibration:main
+    ogoReplaceLabels = ogo.cli.ReplaceLabels:main
 
 [pbr]
 skip_changelog = 1
