--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = ogo
 author = Bryce A. Besler, Andrew S. Michalski, Steven K. Boyd
-author-email = babesler@ucalgary.ca, andrew.michalski@ucalgary.ca
+author-email = babesler@ucalgary.ca, andrew.michalski@ucalgary.ca, skboyd@ucalgary.ca
 summary = Technologies for opportunistic screening of osteoporosis
 description-file = README.rst
 description-content-type = text/x-rst; charset=UTF-8
@@ -23,8 +23,6 @@ keywords =
 console_scripts =
     ogoCli = ogo.cli.cli:main
     ogoIntCal = ogo.cli.InternalCalibration:main
-    ogoBmdAnalysis = ogo.cli.BmdAnalysis:main
-    ogoBmdTabulate = ogo.cli.BmdTabulate:main
     ogoFePistoiaTabulate = ogo.cli.FePistoiaTabulate:main
     ogoL4CompressionFe = ogo.cli.L4Compression_fe:main
     ogoMindwaysModel3AsyncCalib = ogo.cli.MindwaysModel3AsynchronousCalibration:main
@@ -32,8 +30,13 @@ console_scripts =
     ogoPistoia = ogo.cli.Pistoia:main
     ogoSidewaysFe = ogo.cli.SidewaysFallFe:main
     ogoBMassPhantom = ogo.cli.BMas200PhantomCalibration:main
+    ogoBmdTabulate = ogo.cli.BmdTabulate:main
+    ogoBMDAnalysis = ogo.cli.BMDAnalysis:main
+    ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
+    ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
 
 [pbr]
 skip_changelog = 1
 skip_authors = 1
+
