Updating histogram and aix

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
     ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
     ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
+    ogoImageExam = ogo.cli.ImageExam:main
 
 [pbr]
 skip_changelog = 1
