--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ console_scripts =
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
     ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
     ogoImageExam = ogo.cli.ImageExam:main
+    ogoImageCalibration = ogo.cli.ImageCalibration:main
 
 [pbr]
 skip_changelog = 1
