--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ console_scripts =
     ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
     ogoImageExam = ogo.cli.ImageExam:main
     ogoImageCalibration = ogo.cli.ImageCalibration:main
+    ogoPrintLabels = ogo.cli.PrintLabels:main
 
 [pbr]
 skip_changelog = 1
