--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,7 @@ console_scripts =
     ogoSidewaysFe = ogo.cli.SidewaysFallFe:main
     ogoBMassPhantom = ogo.cli.BMas200PhantomCalibration:main
     ogoBmdTabulate = ogo.cli.BmdTabulate:main
-    ogoBMDAnalysis = ogo.cli.BMDAnalysis:main
+    ogoAnalyzeBMD = ogo.cli.AnalyzeBMD:main
     ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
     ogoCreateDatasetJSON = ogo.cli.CreateDatasetJSON:main
