Adding FE capability

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ console_scripts =
     ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
     ogoPrintLabels = ogo.cli.PrintLabels:main
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
+    ogoGenerateFEM = ogo.cli.GenerateFEM:main
 
 [pbr]
 skip_changelog = 1
