--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,7 @@ console_scripts =
     ogoIsotropicResampling = ogo.cli.IsotropicResampling:main
     ogoPrintLabels = ogo.cli.PrintLabels:main
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
+    ogoProcrustes = ogo.cli.Procrustes:main
     ogoGenerateFEM = ogo.cli.GenerateFEM:main
 
 [pbr]
