created structure and files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Internal tools
-pbr
+pbr~=5.10.0
 click
 
 # Image processing
-simpleitk
-numpy
+simpleitk~=2.1.1
+numpy~=1.16.6
 
 # Statistics
-scipy
+scipy~=1.6.1
 
 # Documentation
 Sphinx
@@ -15,3 +15,10 @@ Sphinx
 # Testings
 nose
 flake8
+n88tools~=9.0.0
+vtk~=8.2.0
+ogo~=0.0.2.dev98
+vtkbone~=1.1.0
+pandas~=1.2.3
+setuptools~=59.8.0
+packaging~=21.3
