--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
       - run: conda activate test
       - run: pip install -e .
       - name: Test
-        run: nosetests tests-OLD
+        run: nosetests tests
