Added utility to deal with strange header errors in some nifti files.

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ console_scripts =
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
     ogoProcrustes = ogo.cli.Procrustes:main
     ogoGenerateFEM = ogo.cli.GenerateFEM:main
+    ogoRepairNifti = ogo.cli.RepairNifti:main
 
 [pbr]
 skip_changelog = 1
