Added visualization tool

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ console_scripts =
     ogoProcrustes = ogo.cli.Procrustes:main
     ogoGenerateFEM = ogo.cli.GenerateFEM:main
     ogoRepairNifti = ogo.cli.RepairNifti:main
+    ogoVisualize = ogo.cli.Visualize:main
 
 [pbr]
 skip_changelog = 1
