--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ console_scripts =
     ogoGenerateFEM = ogo.cli.GenerateFEM:main
     ogoRepairNifti = ogo.cli.RepairNifti:main
     ogoVisualize = ogo.cli.Visualize:main
+    ogoVisualize = ogo.cli.Validate:main
 
 [pbr]
 skip_changelog = 1
