--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,7 @@ console_scripts =
     ogoRepairNifti = ogo.cli.RepairNifti:main
     ogoVisualize = ogo.cli.Visualize:main
     ogoValidate = ogo.cli.Validate:main
+    ogodcm2nii = ogo.cli.dcm2nii:main
 
 [pbr]
 skip_changelog = 1
