New method to merge label files

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ console_scripts =
     ogoVisualize = ogo.cli.Visualize:main
     ogoValidate = ogo.cli.Validate:main
     ogodcm2nii = ogo.cli.dcm2nii:main
+    ogoMergeLabels = ogo.cli.MergeLabels:main
 
 [pbr]
 skip_changelog = 1
