Added new function for cropping image

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
     ogoValidate = ogo.cli.Validate:main
     ogodcm2nii = ogo.cli.dcm2nii:main
     ogoMergeLabels = ogo.cli.MergeLabels:main
+    ogoImageCrop = ogo.cli.ImageCrop:main
 
 [pbr]
 skip_changelog = 1
