Added new function to read pickle files

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,7 @@ console_scripts =
     ogoMergeLabels = ogo.cli.MergeLabels:main
     ogoImageCrop = ogo.cli.ImageCrop:main
     ogoGraphCuts = ogo.cli.GraphCuts:main
+    ogoReadPickle = ogo.cli.ReadPickle:main
 
 [pbr]
 skip_changelog = 1
