New function to perform morphological operations on labels

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ console_scripts =
     ogoImageCrop = ogo.cli.ImageCrop:main
     ogoGraphCuts = ogo.cli.GraphCuts:main
     ogoReadPickle = ogo.cli.ReadPickle:main
+    ogoImageMorphologicalOperation = ogo.cli.ImageMorphologicalOperation:main
 
 [pbr]
 skip_changelog = 1
