Adding new morphological operator

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ console_scripts =
     ogoImageCrop = ogo.cli.ImageCrop:main
     ogoGraphCuts = ogo.cli.GraphCuts:main
     ogoReadPickle = ogo.cli.ReadPickle:main
-    ogoImageMorphologicalOperation = ogo.cli.ImageMorphologicalOperation:main
+    ogoMorphologicalOperation = ogo.cli.MorphologicalOperation:main
 
 [pbr]
 skip_changelog = 1
