Adding intensity projection method

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ console_scripts =
     ogoGraphCuts = ogo.cli.GraphCuts:main
     ogoReadPickle = ogo.cli.ReadPickle:main
     ogoMorphologicalOperation = ogo.cli.MorphologicalOperation:main
+    ogoIntensityProjection = ogo.cli.IntensityProjection:main
 
 [pbr]
 skip_changelog = 1
