Adding a Dicom management tool

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
     ogoReadPickle = ogo.cli.ReadPickle:main
     ogoMorphologicalOperation = ogo.cli.MorphologicalOperation:main
     ogoIntensityProjection = ogo.cli.IntensityProjection:main
+    ogoDicomScanner = ogo.cli.DicomScanner:main
 
 [pbr]
 skip_changelog = 1
