--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ console_scripts =
     ogoMorphologicalOperation = ogo.cli.MorphologicalOperation:main
     ogoIntensityProjection = ogo.cli.IntensityProjection:main
     ogoDicomScanner = ogo.cli.DicomScanner:main
+    ogoDicomSelector = ogo.cli.DicomSelector:main
 
 [pbr]
 skip_changelog = 1
