--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ console_scripts =
     ogoIntensityProjection = ogo.cli.IntensityProjection:main
     ogoDicomScanner = ogo.cli.DicomScanner:main
     ogoDicomSelector = ogo.cli.DicomSelector:main
+    ogoImageThreshold = ogo.cli.ImageThreshold:main
 
 [pbr]
 skip_changelog = 1
