--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
     ogoIntensityProjection = ogo.cli.IntensityProjection:main
     ogoDicomSelector = ogo.cli.DicomSelector:main
     ogoImageThreshold = ogo.cli.ImageThreshold:main
+    ogoDemonsRegistration = ogo.cli.DemonsRegistration:main
 
 [pbr]
 skip_changelog = 1
