--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ console_scripts =
     ogoReplaceLabels = ogo.cli.ReplaceLabels:main
     ogoProcrustes = ogo.cli.Procrustes:main
     ogoGenerateFEM = ogo.cli.GenerateFEM:main
-    ogoRepairNifti = ogo.cli.RepairNifti:main
+    ogoRepairNIfTI = ogo.cli.RepairNifti:main
     ogoVisualize = ogo.cli.Visualize:main
     ogoValidate = ogo.cli.Validate:main
     ogoMergeLabels = ogo.cli.MergeLabels:main
