Adding tool for summarizing validation results

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,7 +41,7 @@ console_scripts =
     ogoDicomSelector = ogo.cli.DicomSelector:main
     ogoImageThreshold = ogo.cli.ImageThreshold:main
     ogoImageIntensityWindowingFilter = ogo.cli.ImageIntensityWindowingFilter:main
-    ogoSummarizeValidationData = ogo.cli.SummarizeValidationData:main
+    ogoValidateSummary = ogo.cli.ValidateSummary:main
 
 [pbr]
 skip_changelog = 1
