Added collection for just the spine

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ console_scripts =
     ogoImageThreshold = ogo.cli.ImageThreshold:main
     ogoImageIntensityWindowingFilter = ogo.cli.ImageIntensityWindowingFilter:main
     ogoValidateSummary = ogo.cli.ValidateSummary:main
+    ogoValidateSelectBest = ogo.cli.ValidateSelectBest:main
 
 [pbr]
 skip_changelog = 1
