--- a/setup.cfg
+++ b/setup.cfg
@@ -43,7 +43,7 @@ console_scripts =
     ogoImageIntensityWindowingFilter = ogo.cli.ImageIntensityWindowingFilter:main
     ogoValidateSummary = ogo.cli.ValidateSummary:main
     ogoValidateSelectBest = ogo.cli.ValidateSelectBest:main
-    ogoValidateSelectBest = ogo.cli.ImageConnectedComponents:main
+    ImageConnectedComponents = ogo.cli.ImageConnectedComponents:main
 
 [pbr]
 skip_changelog = 1
