--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ console_scripts =
     ogoValidateSummary = ogo.cli.ValidateSummary:main
     ogoValidateSelectBest = ogo.cli.ValidateSelectBest:main
     ogoImageConnectedComponents = ogo.cli.ImageConnectedComponents:main
+    ogoSegmentCalibrationRods = ogo.cli.SegmentCalibrationRods:main
 
 [pbr]
 skip_changelog = 1
