Things required for FEA

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,6 +44,7 @@ console_scripts =
     ogoValidateSummary = ogo.cli.ValidateSummary:main
     ogoValidateSelectBest = ogo.cli.ValidateSelectBest:main
     ogoImageConnectedComponents = ogo.cli.ImageConnectedComponents:main
+    ogoConvertToRas = ogo.cli.ConvertToRas:main
 
 [pbr]
 skip_changelog = 1
