added utility to estimate linear attenuation

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ console_scripts =
     ogoImageConnectedComponents = ogo.cli.ImageConnectedComponents:main
     ogoSegmentCalibrationRods = ogo.cli.SegmentCalibrationRods:main
     ogoConvertToRas = ogo.cli.ConvertToRas:main
+		CalculateLinearAttenuation = ogo.cli.CalculateLinearAttenuation:main
 
 [pbr]
 skip_changelog = 1
