Added new functionailty

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,7 +46,8 @@ console_scripts =
     ogoImageConnectedComponents = ogo.cli.ImageConnectedComponents:main
     ogoSegmentCalibrationRods = ogo.cli.SegmentCalibrationRods:main
     ogoConvertToRas = ogo.cli.ConvertToRas:main
-		ogoCalculateLinearAttenuation = ogo.cli.CalculateLinearAttenuation:main
+	ogoCalculateLinearAttenuation = ogo.cli.CalculateLinearAttenuation:main
+	ogoMaterialDecomposition = ogo.cli.MaterialDecomposition:main
 
 [pbr]
 skip_changelog = 1
